--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,22 @@ header{
     font-size: 30px;  
 }
 
-body{ background-image: url(moroccan-flower.png);}
+body{
+     background-image: url(moroccan-flower.png);
+    max-width: 800px;
+    margin: auto;
+    position: relative;
+    padding-bottom: 58px;
+    min-height: 100vh;  
+    }
 main {
+    float: left;
     max-width: 350px;
     margin: auto;
     text-align: justify;
     background-color: oldlace;
     font-family: sans-serif:Verdana, Geneva, Tahoma, sans-serif;
+    
       
 }
 
@@ -23,9 +32,25 @@ nav{float: right;
     font-size: 30px;}
 
 
-aside{ float: right;
-    max-width: 500px;
+aside{ 
+    padding: 10px;
     background-color: oldlace;
-
+    float: right;
 
 }
+a{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: grey;
+
+}
+footer{
+    background-color: grey;
+    text-align: center;
+    padding: 5px;
+    bottom: 0;
+    width: 800px;
+    position: fixed;
+    z-index: 1;   }
+
+    }
+   
